# knight-tour-game

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  uno.config.js  vite.config.ts
public/: manifest.webmanifest
public/.well-known/: assetlinks.json
solver/: Cargo.toml
solver/src/: lib.rs
src/: App.svelte  main.ts  manifest.webmanifest  style.css
src/Modals/: Challenges.svelte  Guide.svelte  Highscores.svelte  Settings.svelte  Solver.svelte
src/components/: Modal.svelte  ReloadPrompt.svelte  SettingsMoves.svelte  tile.svelte
src/lib/: challenges.ts  helpers.ts  highscores.ts  presets.ts  solver.ts
src/lib/components/: Button.svelte  Challenge.svelte  Challenges.svelte  Guide.svelte  Highscores.svelte  Modal.svelte  Settings.svelte  SettingsInput.svelte  SettingsMoves.svelte  Solver.svelte  ThemeToggle.svelte  button.svelte  tile.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
twa/: .gitignore  manifest-checksum.txt  twa-manifest.json
twa/app/: build.gradle
twa/app/src/main/: AndroidManifest.xml
twa/app/src/main/java/net/toulis/knight_tour/twa/: Application.java  DelegationService.java  LauncherActivity.java
twa/app/src/main/res/raw/: web_app_manifest.json
twa/app/src/main/res/values/: strings.xml
twa/app/src/main/res/xml/: shortcuts.xml
